# mu8

./: .gitignore  axios.py  main.py  readme.md  requirements.txt
mu8-rs/: Cargo.toml
mu8-rs/src/: converter.rs  downloader.rs  http.rs  m3u8.rs  main.rs
